--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A new game based off of the classic snake arcade game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "grunt"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/drewdrewthis/snake-game#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "latest",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-imagemin": "^1.0.0",
